fix spacing on QuestionResult image

--- a/src/styles/QuestionResult.scss
+++ b/src/styles/QuestionResult.scss
@@ -30,7 +30,8 @@
   }
 
   img {
-    max-width: 4em; 
+    max-width: 4em;
+    margin-right:.5rem;
   }
   .icon-container {
     position: relative;
